# frost

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Clean.bat  README.md  Setup.bat  SetupWithoutGit.bat  premake5.lua  vcpkg.json
Editor/: CMakeLists.txt
Editor/resources/editor/skyboxes/: SOURCE.txt
Editor/scripts/Physics/: PhysicsLayer.h
Editor/src/Editor/: Editor.cpp  Editor.h  EditorApp.cpp  EditorApp.h  EditorLayer.cpp  EditorLayer.h  ProjectHubLayer.cpp  ProjectHubLayer.h
Editor/src/Editor/Events/: NewSceneEvent.h  ProjectCloseEvent.h
Editor/src/Editor/Project/: OpenProjectSettingsEvent.h  ProjectInfo.cpp  ProjectInfo.h  ProjectOpenEvent.h
Editor/src/Editor/Scripting/: ScriptingWatcher.cpp  ScriptingWatcher.h
Editor/src/Editor/UI/: ContentBrowser.cpp  ContentBrowser.h  EditorPanel.h  EditorTheme.cpp  EditorTheme.h  MainMenuBar.cpp  MainMenuBar.h  ProjectSettingsWindow.cpp  ProjectSettingsWindow.h  SceneView.cpp  SceneView.h  StatusBar.cpp  StatusBar.h
Editor/src/Editor/Utils/: EditorCameraController.cpp  EditorCameraController.h  FileDialogs.cpp  FileDialogs.h  FileWatcher.cpp  FileWatcher.h  PhysicsCodeGenerator.cpp  PhysicsCodeGenerator.h  PlatformUtils.cpp  PlatformUtils.h
Frost/: CMakeLists.txt
Frost/resources/shaders/: HUD_Pixel.hlsl  HUD_Vertex.hlsl  PS_Billboard.hlsl  PS_DebugLine.hlsl  PS_DebugTriangle.hlsl  PS_FullScreenQuad.hlsl  PS_GBuffer.hlsl  PS_HUD.hlsl  PS_HUDText.hlsl  PS_Lighting.hlsl  PS_Shadow.hlsl  PS_Skybox.hlsl  Pixel.hlsl  StencilWritePS.hlsl  StencilWriteVS.hlsl  VS_Billboard.hlsl  VS_DebugLine.hlsl  VS_DebugTriangle.hlsl  VS_FullScreenQuad.hlsl  VS_GBuffer.hlsl  VS_HUD.hlsl  VS_HUDText.hlsl  VS_Shadow.hlsl  VS_Skybox.hlsl  Vertex.hlsl
Frost/resources/shaders/HUD/: PS_HUD.hlsl  PS_HUDText.hlsl  VS_HUD.hlsl
Frost/resources/shaders/Light/: LightingCommon.hlsli  PS_AmbiantLight.hlsl  PS_DirectionalLight.hlsl  PS_EnvironmentLight.hlsl  PS_FinalLight.hlsl  PS_InitLight.hlsl  PS_PointLight.hlsl  PS_SpotLight.hlsl  VS_AmbiantLight.hlsl  VS_DirectionalLight.hlsl  VS_PointLight.hlsl  old_PS_Lighting.hlsl
Frost/resources/shaders/PostEffect/: PS_ChromaticAberration.hlsl  PS_ColorCorrection.hlsl  (+2 more)
Frost/src/: Frost.h
Frost/src/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Window.cpp  Window.h
Frost/src/Event/: Event.h
Frost/src/Renderer/: Device.cpp  Device.h  Renderer.cpp  Renderer.h
Frost/src/Scene/: BoxRenderer.cpp  BoxRenderer.h  Component.h  GameObject.cpp  GameObject.h  RendererSystem.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h
Frost/src/Utils/: NoCopy.h
Game/: CMakeLists.txt
Game/resources/meshes/: boat.glb  paper_airplane.glb  pill.fbx  plane.fbx  portal.fbx  portal2.fbx  portal3.glb  portal4.glb  sphere.fbx
Game/src/: Game.cpp  Game.h  LabApp.cpp  LabApp.h  MainLayer.cpp  MainLayer.h
Game/src/Objects/: Billboard.cpp  Billboard.h  Boost.cpp  Boost.h  CheckPoint.cpp  CheckPoint.h  GameState.h  Grass.cpp  Grass.h  HUD_Logo.cpp  HUD_Logo.h  LapCheckPoint.cpp  LapCheckPoint.h  LevelCamera.cpp  LevelCamera.h  Player.cpp  Player.h  PlayerCamera.cpp  PlayerCamera.h  Portal.cpp  Portal.h  Sun.cpp  Sun.h  Terrain.cpp  Terrain.h  Wall.cpp  Wall.h  Water.cpp  Water.h
Game/src/PauseMenu/: PauseMenu.cpp  PauseMenu.h
Game/src/Physics/: PhysicsLayer.cpp  PhysicsLayer.h
Game/src/StartMenu/: StartMenu.cpp  StartMenu.h
Jolt3/: CMakeLists.txt
Jolt3/resources/meshes/: cube.fbx
Jolt3/src/: Bullet.cpp  Bullet.h  Game.cpp  Game.h  MainLayer.cpp  MainLayer.h
Jolt3/src/Objects/: Bullet.cpp  Bullet.h  Cargo.cpp  Cargo.h  Goal.cpp  Goal.h  LevelCamera.cpp  LevelCamera.h  Player.cpp  Player.h  PlayerCamera.cpp  PlayerCamera.h  Terrain.cpp  Terrain.h
Jolt3/src/Physics/: PhysicsLayer.cpp  PhysicsLayer.h
Lab/: CMakeLists.txt  imgui.ini
Lab/resources/: Vertex.hlsl
Lab/resources/meshes/: KitPumpkin.fbx  diffuse.fbx  moto.glb  normal.fbx  plane.fbx  text.fbx
Lab/resources/shaders/: Pixel.hlsl
Lab/src/: Game.cpp  Game.h  LabApp.cpp  LabApp.h  MainLayer.cpp  MainLayer.h
Lab/src/Objects/: BallRain.cpp  BallRain.h  FreeCamera.cpp  FreeCamera.h  Grass.cpp  Grass.h  HUD_Logo.cpp  HUD_Logo.h  Hierarchy test.cpp  HierarchyTest.cpp  HierarchyTest.h  Moto.cpp  Moto.h  Ogre.cpp  Ogre.h  OgreNormal.cpp  OgreNormal.h  Plane.cpp  Plane.h  Player.cpp  Player.h  PointLight.cpp  PointLight.h  Portal.cpp  Portal.h  Shapes.cpp  Shapes.h  Sky.cpp  Sky.h  Sphere.cpp  Sphere.h  SphereCustomShader.cpp  SphereCustomShader.h  TV.cpp  TV.h  Terrain.cpp  Terrain.h  Text.cpp  Text.h  TopCamera.cpp  (+3 more)
Lab/src/Physics/: PhysicsLayer.cpp  PhysicsLayer.h
SwiftBot/: CMakeLists.txt  project.frost
SwiftBot/assets/HUD/: PauseScreen.prefab  Speedometer.prefab  SplashScreen.prefab  Timer.prefab  VictoryScreen.prefab
SwiftBot/assets/Player/: Boat.glb  Moto.glb  Player.prefab  RedPlane.glb  Wheel.glb
SwiftBot/scripts/: ScriptRegistry.cpp
SwiftBot/scripts/CheckPoint/: Checkpoint.cpp  Checkpoint.h  CheckpointScript.cpp  CheckpointScript.h
SwiftBot/scripts/GameState/: GameState.cpp  GameState.h
SwiftBot/scripts/HUD/: PauseScreen.cpp  PauseScreen.h  Speedometer.cpp  Speedometer.h  SplashScreen.cpp  SplashScreen.h  Timer.cpp  Timer.h  VictoryScreen.cpp  VictoryScreen.h
SwiftBot/scripts/Layer/: AntiGravity.cpp  AntiGravity.h  GrassLayer.cpp  GrassLayer.h  HandWritting.cpp  HandWritting.h  Toon.cpp  Toon.h
SwiftBot/scripts/Looping/: Looping.cpp  Looping.h
SwiftBot/scripts/Materials/: Billboard.cpp  Billboard.h  Boost.cpp  Boost.h  Grass.cpp  Grass.h  Terrain.cpp  Terrain.h  Water.cpp  Water.h
SwiftBot/scripts/Physics/: PhysicLayer.h
SwiftBot/scripts/Player/: PlayerCamera.cpp  PlayerCamera.h  PlayerController.cpp  PlayerController.h  PlayerSpringCamera.cpp  PlayerSpringCamera.h  SelectedImageManagerScript.cpp  SelectedImageManagerScript.h
SwiftBot/scripts/Portal/: Portal.cpp  Portal.h
SwiftBot/scripts/Samples/: Rotate.cpp  Rotate.h
SwiftBot/src/Physics/: GeneratedPhysicsLayers.cpp  GeneratedPhysicsLayers.h
SwiftBot/src/SwiftBot/: Application.cpp  Application.h
(+423 files in other folders)
